# projet-llm

./: .gitignore  README.md  REPORT.txt  pyproject.toml
app/: api.py  entity_extraction_agent.py  financial_data_agent.py  graph_agent.py  graphrag_agent.py  llm_synthesis_agent.py  sec_filing_agent.py  source_discovery_agent.py  ticker_agent.py  vector_store_agent.py
data/: stocks_symbol.xlsx
notebooks/: evaluation.ipynb
ui/frontend/: package-lock.json  package.json
ui/frontend/public/: index.html
ui/frontend/src/: App.css  App.js
