[tool.poetry]
name = "investment-graphrag-analyzer"
version = "0.1.0"
description = "Multi-Agent GraphRAG Builder"
authors = ["Luca-Fintech <luca.rougemont@edu.devinci.fr>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
ollama = "^0.6.1"
pandas = "^2.3.3"
openpyxl = "^3.1.5"
yfinance = "^0.2.66"
black = "^25.11.0"
streamlit = "^1.51.0"
flask = "^3.1.2"
flask-cors = "^6.0.1"
neo4j = "^6.0.3"
sec-edgar-downloader = "^5.0.3"
beautifulsoup4 = "^4.14.2"
lxml = "^6.0.2"
sentence-transformers = "^5.1.2"
chromadb = "^1.3.5"
matplotlib = "^3.10.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
